--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "@solana/web3.js": "^1.95.3",
+    "@walletconnect/client": "^1.8.0",
     "axios": "^1.7.7",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
