--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "react-shimmer-effects": "^1.0.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
