--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-shimmer-effects": "^1.0.3",
+    "react-tradingview-widget": "^1.3.2",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
