--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@walletconnect/client": "^1.8.0",
     "axios": "^1.7.7",
     "ethers": "^6.13.4",
+    "idb": "^8.0.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
